test/sc++/error/forall-array-4d.scpp
../../scc/error/forall-array-4d.sc